2014-10-20  Juri Linkov  <juri@jurta.org>

	* vc/diff-mode.el (diff-refine-changed): Rename from
	`diff-refine-change' for consistency with `diff-changed'.
	(diff-refine-change): Add obsolete face alias.  (Bug#10181)

	* vc/smerge-mode.el (smerge-refined-changed): Rename from
	`smerge-refined-change'.
	(smerge-refined-change): Add obsolete face alias.

2014-09-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (call-process-shell-command, process-file-shell-command):
	Make the `args' obsolete (bug#18409).
	(start-process-shell-command, start-file-process-shell-command):
	Use `declare'.

2014-10-20  Juanma Barranquero  <lekktu@gmail.com>

	* skeleton.el (skeleton-autowrap): Mark as obsolete.  Doc fix.

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* dired.el (dired-read-regexp): Make obsolete.
	(dired-mark-files-regexp, dired-mark-files-containing-regexp)
	(dired-flag-files-regexp):
	* dired-aux.el (dired-mark-read-regexp):
	* dired-x.el (dired-mark-unmarked-files): Use read-regexp directly.

2014-10-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (inferior-python-mode): Use add-hook.

	* Makefile.in (AUTOGEN_VCS): Remove emulation/tpu-edt.el.

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* emulation/crisp.el, emulation/tpu-edt.el, emulation/tpu-extras.el:
	* emulation/tpu-mapper.el, emulation/vi.el, emulation/vip.el:
	* emulation/ws-mode.el: Move to obsolete/.  [Backport]

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* cus-start.el (history-length): Bump :version.  [Backport]

2014-10-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* obsolete/cc-compat.el: Make obsolete (bug#18561).

	* epg-config.el (epg-gpg-program): Don't use absolute names by default.

	* emacs-lisp/bytecomp.el (=, <, >, <=, >=): Don't optimize multi-arg
	case (bug#18767).

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* Version 24.4 released.

2014-10-15  Alan Mackenzie  <acm@muc.de>

	* cus-edit.el (custom-command-apply): Specify the return value in
	the doc string.